--- a/Pathfinder/src/main/resources/application.yml
+++ b/Pathfinder/src/main/resources/application.yml
@@ -12,9 +12,10 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
+#  ---sql--- Set when Start First Time
   jpa:
     # Choose either MySQL 8 or MySQL 5 below
     # For MySQL 8
